fixed progress bars and made them readable

--- a/camper/less/main.less
+++ b/camper/less/main.less
@@ -780,6 +780,16 @@ footer {
         margin-top: 5px;
         margin-bottom: 5px;
     }
+    .participants-progress {
+        background: #f0f0f0;
+    }
+    .progress-info {
+        .pull-right;
+        margin-left: 10px;
+        padding-top: 4px;
+        font-size: 12px;
+    }
+
     .panel-title {
         text-transform: uppercase;
         font-size: 20px;
@@ -966,4 +976,9 @@ article.blogentry {
 #share-area {
     margin-bottom: 20px;
 }
+
+.progress-bar {
+    color: #000;
+}
+
 
