--- a/camper/less/variables.less
+++ b/camper/less/variables.less
@@ -16,7 +16,7 @@
 
 @brand-primary:         darken(#428bca, 6.5%);
 @brand-success:         #5cb85c;
-@brand-info:            #5bc0de;
+@brand-info:            lighten(#5bc0de, 20%);
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
 
@@ -156,7 +156,7 @@
 @btn-success-bg:                 @brand-success;
 @btn-success-border:             darken(@btn-success-bg, 5%);
 
-@btn-info-color:                 #fff;
+@btn-info-color:                 #000;
 @btn-info-bg:                    @brand-info;
 @btn-info-border:                darken(@btn-info-bg, 5%);
 
